syntax = "proto3";

package info.maaskant.wmsnotes.server.command.grpc;

service CommandService {
    rpc PostCommand (PostCommandRequest) returns (PostCommandResponse);
}

message PostCommandRequest {
    // The id of the note to which the command applies
    string note_id = 1;

    // The id of the last known event of the note
    int32 last_event_id = 2;

    oneof command {
        CreateNoteCommand create_note = 10;
        DeleteNoteCommand delete_note = 11;
    }

    message CreateNoteCommand {
        string title = 1;
    }

    message DeleteNoteCommand {
    }
}


message PostCommandResponse {
    enum Status {
        SUCCESS = 0;
        INTERNAL_ERROR = 1;
        BAD_REQUEST = 2;
    }
    Status status = 1;
    string errorDescription = 2;
    int32 new_event_id = 3;
}